Commit style fix for askunimelb_widgets.theme.css

--- a/askunimelb_widgets.theme.css
+++ b/askunimelb_widgets.theme.css
@@ -1,6 +1,14 @@
 /**
  * Styling!
  */
+.block-askunimelb-widgets .rn_Query {
+  width: 85%;
+}
+
+.block-askunimelb-widgets li.rn_Item {
+  margin-bottom: 1em;
+}
+
 .block-askunimelb-widgets .rn_Title {
   font-weight: bold;
 }
